# IFIApp

./: .gitignore  API_DOCUMENTATION.md  README.md  pyproject.toml
ifiapp/: hooks.py  ifiapi.py  modules.txt
ifiapp/config/: desktop.py  docs.py
ifiapp/fixtures/: class.json  college.json  corporate.json  districts.json  energy_point_rule.json  energy_point_settings.json  ifimodule.json  question.json  role.json  role_profile.json  server_script.json  states.json  topic.json  workflow.json  workflow_state.json
ifiapp/ifiapp/doctype/appuser/: appuser.js  appuser.json  appuser.py  test_appuser.py
ifiapp/ifiapp/doctype/attendance/: attendance.js  attendance.json  attendance.py  test_attendance.py
ifiapp/ifiapp/doctype/class/: class.js  class.json  class.py  test_class.py
ifiapp/ifiapp/doctype/classsession/: classsession.js  classsession.json  classsession.py  test_classsession.py
ifiapp/ifiapp/doctype/college/: college.js  college.json  college.py  test_college.py
ifiapp/ifiapp/doctype/corporate/: corporate.js  corporate.json  corporate.py  test_corporate.py
ifiapp/ifiapp/doctype/districts/: districts.js  districts.json  districts.py  test_districts.py
ifiapp/ifiapp/doctype/englishmark/: englishmark.json  englishmark.py
ifiapp/ifiapp/doctype/evaluation/: evaluation.js  evaluation.json  evaluation.py  test_evaluation.py
ifiapp/ifiapp/doctype/ifimodule/: ifimodule.js  ifimodule.json  ifimodule.py  test_ifimodule.py
ifiapp/ifiapp/doctype/mappedschools/: mappedschools.json  mappedschools.py
ifiapp/ifiapp/doctype/mathsmark/: mathsmark.json  mathsmark.py
(+47 files in other folders)
